= CHANGES

== 0.9.10 (Unreleased)

* Performance Tuning: Caching templates and routes in production
* Danish translation [Thanks to Molte]
* Russian translation [Thanks to Imm]
* Added +extcore+ as a javascript option in project generator [Thanks to Imm]
* Updated jquery to v1.4.2
* Added couchdb support for padrino-admin [Thanks to Ghostm]
* Brazilian Translation [Thanks to Deminew]
* French Translation [Thanks to Mickey]
* ActiveSupport 3.0 Compatibility fixes
* Removed VERSION files. This prevent problems described here: http://github.com/nex3/haml/issues/issue/24
* Added default values for controllers
* Updated sequel generation to work with sqlite3.
* Fixes support for index routes with params.
* Fixes SASS reload plugin issue on 1.9.X.
* Fixes an issue with generator not casing controller / model names
* Added sequel support for padrino-admin [Thanks to Aemadrid]
* Added basic sequel migration tasks [Thanks to Aemadrid]
* Mailer now supports setting template path to render explicitly

== 0.9.9

* Minor typo fixes

== 0.9.8

* Dropped compatibility with Sinatra < 1.0
* Ruby 1.8.6 compat
* Initials additions for make Padrino compat with ruby 1.9.2
* Fixed a small issue with Passenger and Ruby 1.9.1
* Removed clear_template_cache! since Sinatra 1.0. now has settings.reload_templates
* Fixed error_messages_for with custom locales
* Added "padrino gen", "padrino g" as alias of padrino-gen.
* Prevent that an account destroy itself
* Removed some unused code from padrino-admin
* Improved Padrino Admin Generator, now admin_page accepts multiple models
* Fixed Padrino Admin Account where the accounts password field is in plain text (text_field)
* Added layouts folder back into application skeleton
* Fixed an issue with not being able to render erb or haml properly in a js response
* Added support for forcing render of specified template (i.e render 'foo.haml' in js request)

== 0.9.7

* Fixed a problem with folders called "sinatra" and PADRINO_IGNORE_CALLERS