@@ -2,6 +2,11 @@
 
 == 0.9.10 (Unreleased)
 
+* Our routing system now with :provides or :respond_to (other than route format) match "request.accept"
+* Our routes now accept Sinatra 1.0 conditions
+* Routing refactoring
+* Now mounter use the our new Router instead of Rack::Builder
+* Added a new router class that handle in a easy why domains
 * Performance Tuning: Caching templates and routes in production
 * Danish translation [Thanks to Molte]
 * Russian translation [Thanks to Imm]
